--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,34 @@
-importlib-metadata
-certifi
-charset-normalizer
-click
-Flask
-idna
-Flask-WTF
-importlib-metadata
-itsdangerous
-Jinja2
-MarkupSafe==2.0.0
-oauthlib
-psycopg2-binary
-requests
-requests-oauthlib
-tweepy
-typing_extensions
-urllib3
-Werkzeug
-WTForms
-zipp
+APScheduler==3.8.1
+backports.zoneinfo==0.2.1
+certifi==2020.6.20
+charset-normalizer==2.0.9
+click==8.0.3
+dataclasses==0.8
+Flask==2.0.2
+Flask-APScheduler==1.12.3
+Flask-SQLAlchemy==2.5.1
+Flask-WTF==1.0.0
+greenlet==1.1.2
+idna==3.3
+importlib-metadata==4.8.3
+importlib-resources==5.4.0
+itsdangerous==2.0.1
+Jinja2==3.0.3
+MarkupSafe==2.0.1
+oauthlib==3.1.1
+psycopg2-binary==2.9.2
+python-dateutil==2.8.2
+pytz==2021.3
+pytz-deprecation-shim==0.1.0.post0
+requests==2.26.0
+requests-oauthlib==1.3.0
+six==1.16.0
+SQLAlchemy==1.4.29
+tweepy==4.4.0
+typing_extensions==4.0.1
+tzdata==2021.5
+tzlocal==4.1
+urllib3==1.26.7
+Werkzeug==2.0.2
+WTForms==3.0.0
+zipp==3.6.0
